...
        android:title="Home" />
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/search_drink"
        android:title="Search Drink" />
    <item
        android:id="@+id/nav_categories"
        android:icon="@android:drawable/arrow_down_float"
        android:title="Drink Categories" />
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_ordinary_drinks"
            android:icon="@drawable/ordinary_drink"
...
    </group>


    <item>
        <menu>
            <item
                android:id="@+id/nav_search_drk_ingr"
                android:icon="@drawable/search_ingredients"
                android:title="Search Drink By Ingredient" />
            <item
                android:id="@+id/nav_rndm_drink"
                android:icon="@drawable/random_drink"
                android:title="Random Drink" />
...
