...
    android:background="@android:color/background_light"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.olive.drinkdepository.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="0dp"
        android:layout_height="523dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
...
